# yolov2

./: CMakeLists.txt  README.md
cfg/: voc.data  yolo-voc.2.0.cfg  yolo-voc.cfg
data/: voc.names
examples/: art.c  attention.c  captcha.c  cifar.c  classifier.c  coco.c  darknet.c  detector.c  dice.c  go.c  lsd.c  nightmare.c  regressor.c  rnn.c  rnn_vid.c  segmenter.c  super.c  swag.c  tag.c  voxel.c  writing.c  yolo.c
scripts/: voc_label.py
src/: activations.h  blas.c  blas.h  box.h  cuda.h  data.c  data.h  image.c  image.h  layer.h  list.h  matrix.h  network.c  network.h  parser.c  parser.h  region_layer.c  region_layer.h  tree.h  utils.h
