cmake_minimum_required(VERSION 3.8)
project(darknet_train)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        examples/art.c
        examples/attention.c
        examples/captcha.c
        examples/cifar.c
        examples/classifier.c
        examples/coco.c
        examples/darknet.c
        examples/detector.c
        examples/dice.c
        examples/go.c
        examples/lsd.c
        examples/nightmare.c
        examples/regressor.c
        examples/rnn.c
        examples/rnn_vid.c
        examples/segmenter.c
        examples/super.c
        examples/swag.c
        examples/tag.c
        examples/voxel.c
        examples/writing.c
        examples/yolo.c
        include/darknet.h
        src/activation_layer.c
        src/activation_layer.h
        src/activations.c
        src/activations.h
        src/avgpool_layer.c
        src/avgpool_layer.h
        src/batchnorm_layer.c
        src/batchnorm_layer.h
        src/blas.c
        src/blas.h
        src/box.c
        src/box.h
        src/classifier.h
        src/col2im.c
        src/col2im.h
        src/compare.c
        src/connected_layer.c
        src/connected_layer.h
        src/convolutional_layer.c
        src/convolutional_layer.h
        src/cost_layer.c
        src/cost_layer.h
        src/crnn_layer.c
        src/crnn_layer.h
        src/crop_layer.c
        src/crop_layer.h
        src/cuda.c
        src/cuda.h
        src/data.c
        src/data.h
        src/deconvolutional_layer.c
        src/deconvolutional_layer.h
        src/demo.c
        src/demo.h
        src/detection_layer.c
        src/detection_layer.h
        src/dropout_layer.c
        src/dropout_layer.h
        src/gemm.c
        src/gemm.h
        src/gru_layer.c
        src/gru_layer.h
        src/im2col.c
        src/im2col.h
        src/image.c
        src/image.h
        src/layer.c
        src/layer.h
        src/list.c
        src/list.h
        src/local_layer.c
        src/local_layer.h
        src/lstm_layer.c
        src/lstm_layer.h
        src/matrix.c
        src/matrix.h
        src/maxpool_layer.c
        src/maxpool_layer.h
        src/network.c
        src/network.h
        src/normalization_layer.c
        src/normalization_layer.h
        src/option_list.c
        src/option_list.h
        src/parser.c
        src/parser.h
        src/region_layer.c
        src/region_layer.h
        src/reorg_layer.c
        src/reorg_layer.h
        src/rnn_layer.c
        src/rnn_layer.h
        src/route_layer.c
        src/route_layer.h
        src/shortcut_layer.c
        src/shortcut_layer.h
        src/softmax_layer.c
        src/softmax_layer.h
        src/stb_image.h
        src/stb_image_write.h
        src/tree.c
        src/tree.h
        src/utils.c
        src/utils.h)

add_executable(darknet_train ${SOURCE_FILES})